--- a/Assets/Styles/estilos_rodrigo_espinosa.css
+++ b/Assets/Styles/estilos_rodrigo_espinosa.css
@@ -1,22 +1,61 @@
 body {
-    color:#FFFFFF;
-    background-color: black;}
+    background-color: black;
+
+}
 
 article {
     text-align: center;
     background-color: rgb(44, 43, 43);
-
+    color: #FFFFFF;
+    padding: 1.5rem;
+    border-bottom-style: solid;
+    border-bottom-width: 1px ;
+    border-color: #FFFFFF;
 }
+
+
 
 nav>ul>li>.resaltado{
     color: yellow;
+    text-align: center;
 
 
 }
 
-#titulo_del_blog {
-text-align: center;
-font-size: 3rem;
+nav>ul>li>a{
+    text-decoration: none;
+}
 
+nav>ul>li {
+    list-style: none;
+}
+
+#titulo_del_blog {
+    text-align: center;
+    font-size: 3rem;
+    color: #FFFFFF;
+
+}
+
+figure>.ilustracion {
+    border: 4px solid white;
+    display: inline-block;
+
+}
+
+#footer_blog {
+
+margin: 2rem;
+
+}
+
+.ilustracion figcaption {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    font-style: italic;
+}
+
+.love {
+    background-color: #FFFFFF;
 }
 
