--- a/Assets/Styles/estilos_daniel_ramirez.css
+++ b/Assets/Styles/estilos_daniel_ramirez.css
@@ -90,3 +90,7 @@ section>footer {
     /* esta sección se extenderá 12 columnas. */
     grid-column: span 12;
 }
+
+.alado {
+    color: #FFFFFF;
+}
