--- a/Assets/Styles/estilos_rodrigo_espinosa.css
+++ b/Assets/Styles/estilos_rodrigo_espinosa.css
@@ -105,7 +105,7 @@ nav {
 
 
 /* CHECARSI ESTÁ BIEN */
-nav>ul>li>a{
+nav>ul>li>a:hover{
 
     text-decoration: underline;
     color: greenyellow;
