--- a/Assets/Styles/estilos_rodrigo_espinosa.css
+++ b/Assets/Styles/estilos_rodrigo_espinosa.css
@@ -50,6 +50,20 @@ nav>ul>li {
 #footer_blog {
 
 margin: 2rem;
+display: flex;
+align-items: center;
+justify-content: space-around;
+padding-top: 4rem;
+padding-bottom: 4rem;
+padding-left: 0rem;
+padding-right: 0rem;
+font-size: 1.3rem;
+
+}
+
+#footer_blog div:nth-child(2) {
+
+    font-size: 0.9rem;
 
 }
 
@@ -119,6 +133,27 @@ nav>ul {
     justify-content: space-around;
     border-bottom: 1px solid #fff;
     padding-bottom: 0.5rem;
+
+}
+
+article>header>hgroup {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+article>header>hgroup>h2 {
+
+    display: flex;
+    align-items: center;
+
+}
+
+article>header>hgroup>h2>img {
+
+    margin-right: 1rem;
 
 }
 
