--- a/Assets/Styles/estilos_rodrigo_espinosa.css
+++ b/Assets/Styles/estilos_rodrigo_espinosa.css
@@ -174,11 +174,11 @@ aside>div:nth-last-of-type(even){
 
 }
 
-aside>div>img{
+aside div img{
 
     background-color: #fff;
-    padding: 1rem;
-    border-radius: 60%;
+    padding: 0.5rem;
+    border-radius: 50%;
     margin-right: 1rem;
 
 }
