--- a/Assets/Styles/estilos_daniel_ramirez.css
+++ b/Assets/Styles/estilos_daniel_ramirez.css
@@ -22,12 +22,16 @@ nav>ul>li>.resaltado{
 
 }
 
+
+/* CHECARSI ESTÁ BIEN */
 nav>ul>li>a{
     text-decoration: none;
+    color: #FFFFFF;
 }
 
 nav>ul>li {
     list-style: none;
+
 }
 
 #titulo_del_blog {
@@ -46,6 +50,20 @@ nav>ul>li {
 #footer_blog {
 
 margin: 2rem;
+display: flex;
+align-items: center;
+justify-content: space-around;
+padding-top: 4rem;
+padding-bottom: 4rem;
+padding-left: 0rem;
+padding-right: 0rem;
+font-size: 1.3rem;
+
+}
+
+#footer_blog div:nth-child(2) {
+
+    font-size: 0.9rem;
 
 }
 
@@ -56,7 +74,7 @@ margin: 2rem;
 }
 
 .love {
-    background-color: #FFFFFF;
+    color: #FFFFFF;
 }
 
 section {
@@ -91,6 +109,101 @@ section>footer {
     grid-column: span 12;
 }
 
-.alado {
+
+nav {
+    font-size: 1.3rem;
+}
+
+
+/* CHECARSI ESTÁ BIEN */
+nav>ul>li>a:hover{
+
+    text-decoration: underline;
+    color: greenyellow;
+
+}
+
+nav>ul {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 0.5rem;
+
+}
+
+article>header>hgroup {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+article>header>hgroup>h2 {
+
+    display: flex;
+    align-items: center;
+
+}
+
+article>header>hgroup>h2>img {
+
+    margin-right: 1rem;
+    
+
+}
+
+aside {
+
     color: #FFFFFF;
+
+}
+
+aside>h2{
+
+    text-align: center;
+    font-size: 1.3rem;
+
+}
+
+aside>div:nth-last-of-type(even){
+
+    background-color: rgb(44, 43, 43);
+
+}
+
+aside div img{
+
+    background-color: #fff;
+    padding: 0.5rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+
+}
+
+.tarjeta{
+
+    background-color: grey;
+    width: 350px;
+    padding: 1.5rem;
+    border-bottom: 2px dashed white;
+
+}
+
+.info {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.info2 {
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
 }
